--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,22 +6,40 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 12px auto;
+  border: 8px solid white;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 8px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  font-size: 17px;
+  font-weight: 600;
+  padding: 16px 8px;
+
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 8px;
+  margin-top: 8px;
+  text-align: center;
+  font-size: 17px;
+  font-weight: 600;
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  margin: 0px auto;
+  padding: 8px 24px;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
 }
