Practice using flexbox to style html

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,7 +10,34 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding: 28px;
+  gap: 30px;
+}
+
+.plantbox {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  align-items: center;
+  
+}
+
+.text {
+
+}
+
+
+
+
+
+
 
 /* do not edit this footer */
 .footer {
